--- a/src/board_new/package.xml
+++ b/src/board_new/package.xml
@@ -11,8 +11,17 @@
   <!-- 将 ament_cmake 改为 catkin -->
   <buildtool_depend>catkin</buildtool_depend>
 
-  <exec_depend>joint_state_publisher_gui</exec_depend>
-  <exec_depend>robot_state_publisher</exec_depend>
+  <build_depend>roscpp</build_depend>
+  <build_depend>roslib</build_depend> <!-- 添加这一行 -->
+  <build_depend>gazebo_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
+  <build_depend>tf2</build_depend>
+  
+  <exec_depend>roscpp</exec_depend>
+  <exec_depend>roslib</exec_depend> <!-- 添加这一行 -->
+  <exec_depend>gazebo_msgs</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>tf2</exec_depend>
   <!-- rviz2 改为 rviz -->
   <exec_depend>rviz</exec_depend>
   <exec_depend>gazebo_ros</exec_depend>
